# glipper-lite

CVSROOT/: cvsignore
branches/experimental-plugin-branch/glipper/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.in
branches/experimental-plugin-branch/glipper/data/: Makefile.am  Makefile.in  glipper-plugins.glade
branches/experimental-plugin-branch/glipper/help/de/: de.po
branches/experimental-plugin-branch/glipper/plugins/: Makefile.in  network.py  newline.py
branches/experimental-plugin-branch/glipper/po/: ChangeLog  de.po
branches/experimental-plugin-branch/glipper/src/: Makefile.am  Makefile.in  main.c  main.h  plugin-dialog.c  plugin.c  plugin.h  preferences.c
glipper/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  intltool-update
glipper-lite/: ChangeLog  Makefile.am  README  configure.in
glipper-lite/data/: Makefile.am  glipper-properties.glade  glipper-properties.ui
glipper-lite/help/C/: glipper.xml
glipper-lite/help/de/: de.po
glipper-lite/po/: de.po  es.po  fr.po  hu.po  nl.po  pl.po
glipper-lite/src/: Makefile.am  main.c  preferences.c
glipper-ng/: ChangeLog  README  TODO  aclocal.m4  autogen.sh  configure.ac  plugin-development
glipper-ng/data/: Glipper.xml  glipper.pc.in  plugins-window.glade  properties-window.glade
glipper-ng/glipper/: About.py  Applet.py  Clipboards.py  History.py  Keybinder.py  Makefile.am  Plugin.py  PluginsManager.py  Properties.py  __init__.py  glipper-applet.py  glipper.py
glipper-ng/glipper/gnomedesktop/: Makefile.am
glipper-ng/glipper/keybinder/: Makefile.am
glipper-ng/glipper/plugins/: Makefile.am  actions.glade  actions.py  grow.py  network.glade  network.py  newline.py  nopaste.glade  nopaste.py  snippets.glade  snippets.py  staticitems.py
glipper-ng/help/: Makefile.am
glipper-ng/help/C/: glipper.xml
glipper-ng/help/it/: it.po
glipper-ng/po/: LINGUAS  POTFILES.in  de.po  es.po  fr.po  glipper.pot  it.po  sv.po
glipper/data/: GlipperApplet.xml  GlipperApplet.xml.in  GlipperApplet_Factory.server.in.in  Makefile.am  Makefile.in  glipper-plugins.glade  glipper-properties.glade  glipper.desktop.in  glipper.schemas
glipper/help/: Makefile.am
glipper/plugins/: Makefile.am  Makefile.in  actions.py  network.py  newline.py  nopaste.glade  nopaste.py  staticitems.glade  staticitems.py
glipper/po/: ChangeLog  POTFILES.in  de.po  fr.po
glipper/src/: Makefile.am  Makefile.in  eggtrayicon.h  glipper-i18n.h  main.c  main.h  plugin-dialog.c  plugin-dialog.h  plugin.c  plugin.h  preferences.c  preferences.h
glipper/src/utils/: glipper-i18n.h  keybinder.c
tags/fork/glipper-lite/data/: glipper-properties.glade
tags/fork/glipper-lite/help/de/: de.po
tags/fork/glipper-lite/po/: nl.po  pl.po
tags/release095/glipper/: Makefile.am  configure.in
tags/release095/glipper/po/: ChangeLog
tags/release095/glipper/src/: Makefile.am  main.c
tags/start/glipper/: AUTHORS  intltool-update
tags/start/glipper-ng/: Makefile.am  configure.ac
tags/start/glipper-ng/data/: Glipper.server.in.in  Makefile.am  glipper.schemas.in
tags/start/glipper-ng/data/art/: Makefile.am
tags/start/glipper-ng/po/: POTFILES.in  POTFILES.skip  hu.po  it.po  pl.po
tags/start/glipper/data/: Makefile.in
tags/start/glipper/po/: fr.po  sv.po
tags/start/glipper/src/: Makefile.in  main.c
trunk/CVSROOT/: ciabot_cvs.pl  loginfo
trunk/glipper/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.in
trunk/glipper-lite/: COPYING  Makefile.am  README  autogen.sh  configure.in
trunk/glipper-lite/data/: Makefile.am  glipper-lite.desktop.in  glipper-properties.glade  glipper-properties.ui
trunk/glipper-lite/help/: Makefile.am
trunk/glipper-lite/help/C/: glipper.xml
trunk/glipper-lite/help/fr/: fr.po
trunk/glipper-lite/po/: ChangeLog  Makevars  POTFILES.in  de.po  es.po  hu.po  nl.po  pl.po  ru.po
trunk/glipper-lite/src/: Makefile.am  main.c  preferences.c
trunk/glipper-lite/src/utils/: eggtrayicon.c  keybinder.h
trunk/glipper-ng/: AUTHORS  MAINTAINERS  NEWS  README  aclocal.m4  configure.ac  plugin-development
trunk/glipper-ng/data/: Glipper.xml  plugins-window.glade  properties-window.glade
trunk/glipper-ng/glipper/: About.py  Applet.py  Clipboards.py  History.py  Keybinder.py  Makefile.am  Plugin.py  PluginsManager.py  Properties.py  __init__.py  glipper.py
trunk/glipper-ng/glipper/osutils/: Makefile.am
trunk/glipper-ng/glipper/plugins/: actions.glade  actions.py  grow.py  network.glade  network.py  newline.py  nopaste.glade  nopaste.py  snippets.glade  snippets.py
trunk/glipper-ng/help/C/: glipper.xml
trunk/glipper-ng/help/de/: de.po
trunk/glipper-ng/help/fr/: fr.po
trunk/glipper-ng/help/it/: it.po
trunk/glipper-ng/po/: LINGUAS  POTFILES.in  POTFILES.skip  de.po  glipper.pot  it.po  mk.po  pt.po  sv.po
trunk/glipper/data/: GlipperApplet.xml  GlipperApplet_Factory.server.in.in  Makefile.am  glipper-plugins.glade  glipper-properties.glade
trunk/glipper/help/: Makefile.am
trunk/glipper/help/C/: glipper.xml
trunk/glipper/help/de/: de.po
trunk/glipper/help/it/: glipper.xml
trunk/glipper/m4/: ChangeLog
trunk/glipper/plugins/: actions.glade  actions.py  browser.py  staticitems.glade  staticitems.py
trunk/glipper/po/: ChangeLog  de.po  ru.po
trunk/glipper/src/: Makefile.am  Makefile.in  main.c  main.h  plugin-dialog.h  plugin.c  plugin.h  preferences.c  preferences.h
trunk/glipper/src/utils/: keybinder.c
