###########################################################################
# Process this file with autoconf to produce a configure script.
###########################################################################

AC_PREREQ(2.5)

# Set VERSION number here
AC_INIT(glipper-lite, [1.0], [http://code.google.com/p/glipper-lite/issues/list])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE


###########################################################################
# GETTEXT
###########################################################################

GETTEXT_PACKAGE="glipper-lite"
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [gettext package])

# Add languages here, one for each .po file
ALL_LINGUAS="de fr ru nl es hu pl"
AM_GLIB_GNU_GETTEXT
AC_PROG_INTLTOOL([0.23])

glipperlocaledir='${prefix}/${DATADIRNAME}/locale'
AC_SUBST(glipperlocaledir)

# This makes gettext use system gettext, if absent, internationalisation will
# be disabled.
AM_GNU_GETTEXT([external])

###########################################################################

# Checks for programs.
AC_PROG_CC


# GDU
# GNOME_DOC_INIT
AC_CONFIG_MACRO_DIR([m4])


###########################################################################
# Checks for libraries.
###########################################################################

# Minimum versions.
GLIB_REQUIRED=2.12.0
GTK_REQUIRED=2.12.0

AC_SUBST(GLIB_REQUIRED)
AC_SUBST(GTK_REQUIRED)

PKG_CHECK_MODULES(FR,			\
	glib-2.0 >= $GLIB_REQUIRED	\
	gtk+-2.0 >= $GTK_REQUIRED	\
	x11)

AC_SUBST(FR_CFLAGS)
AC_SUBST(FR_LIBS)

###########################################################################


# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([libintl.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_STDBOOL

# Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS([memset mkdir setlocale])
AC_CONFIG_FILES([Makefile
src/Makefile
data/Makefile ])

AC_OUTPUT(po/Makefile.in)
