SUBDIRS = src po data help plugins

EXTRA_DIST = config.rpath m4/ChangeLog  config.rpath m4/ChangeLog  config.rpath m4/ChangeLog  config.rpath m4/ChangeLog  config.rpath mkinstalldirs  config.rpath mkinstalldirs m4/ChangeLog  config.rpath mkinstalldirs m4/ChangeLog  config.rpath m4/ChangeLog  intltool-extract.in intltool-merge.in intltool-update.in  gnome-doc-utils.make  m4

DISTCLEANFILES = *.bak *.log *~ gnome-doc-utils.make

ACLOCAL_AMFLAGS = -I m4

DISTCHECK_CONFIGURE_FLAGS = --disable-scrollkeeper
