###########################################################################
# Process this file with autoconf to produce a configure script.
###########################################################################

AC_PREREQ(2.5)

# Set VERSION number here
AC_INIT(glipper, [0.90-dev], [svenrech@gmx.de])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE

# Default instalation root directory
prefix=/usr


###########################################################################
# GETTEXT
###########################################################################

GETTEXT_PACKAGE="glipper"
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [gettext package])

# Add languages here, on fo each .po file
ALL_LINGUAS="de fr sv"
AM_GLIB_GNU_GETTEXT
AC_PROG_INTLTOOL([0.23])

glipperlocaledir='${prefix}/${DATADIRNAME}/locale'
AC_SUBST(glipperlocaledir)


###########################################################################
# Disable GNOME support
###########################################################################
AC_ARG_ENABLE(gnome,
        [  --disable-gnome        Remove GNOME support. This removes essential features],
        disable_gnome=yes, disable_gnome=no)

AC_MSG_CHECKING(whether GNOME support must be compiled in)
if test x"${disable_gnome}" = xyes; then
   AC_MSG_RESULT([no])
else
   AC_MSG_RESULT([yes])
fi
#AM_CONDITIONAL(DISABLE_GNOME, test x"${disable_gnome}" = xyes)

###########################################################################


# Checks for programs.
AC_PROG_CC


# GDU
if test x"${disable_gnome}" = xno; then
AC_CONFIG_MACRO_DIR([m4])
GNOME_DOC_INIT
fi


###########################################################################
# Checks for libraries.
###########################################################################

# Minimum versions.
GLIB_REQUIRED=2.6.0
GTK_REQUIRED=2.6.0
GLADE_REQUIRED=2.0.0
LIBGNOME_REQUIRED=2.0.0

AC_SUBST(GLIB_REQUIRED)
AC_SUBST(GTK_REQUIRED)


#if test x"${disable_gnome}" = xyes; then
#PKG_CHECK_MODULES(FR,			\
#	glib-2.0 >= $GLIB_REQUIRED	\
#	gtk+-2.0 >= $GTK_REQUIRED	\
#	libglade-2.0 >= $GLADE_REQUIRED) 
#fi
#
#if test x"${disable_gnome}" = xno; then
#PKG_CHECK_MODULES(FR,			\
#	glib-2.0 >= $GLIB_REQUIRED	\
#	gtk+-2.0 >= $GTK_REQUIRED	\
#	libglade-2.0 >= $GLADE_REQUIRED	\
#	libgnome-2.0 >= $LIBGNOME_REQUIRED) 
#fi

PKG_CHECK_MODULES(FR,			\
	glib-2.0 >= $GLIB_REQUIRED	\
	gtk+-2.0 >= $GTK_REQUIRED	\
	libglade-2.0 >= $GLADE_REQUIRED	\
	libgnome-2.0 >= $LIBGNOME_REQUIRED) 

AC_SUBST(FR_CFLAGS)
AC_SUBST(FR_LIBS)

###########################################################################


# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([libintl.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_STDBOOL

# Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS([mkdir])
AC_CONFIG_FILES([Makefile
src/Makefile
data/Makefile
help/Makefile ])

AC_OUTPUT(po/Makefile.in)
